fixed z-index from 1 to 1000

--- a/resources/css/sidebar-layout.css
+++ b/resources/css/sidebar-layout.css
@@ -3,7 +3,8 @@
     height: 100%;
     width: 75px;
     position: fixed;
-    z-index: 1;
+    /* z-index: 1; */
+    z-index: 1000; /* added */
     top: 0;
     left: 0;
     background-color: var(--bg-sidebar);
